# magnit_tes

./: CMakeLists.txt  README.md
src/: TransmitSettings.h
src/client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
src/server/: CMakeLists.txt  CSVFile.cpp  CSVFile.h  CSVProcessor.cpp  CSVProcessor.h  Server.cpp  Server.h  main.cpp
